# SciLab

./: README.md  pyproject.toml
data/constants/CODATA2020/: speed_of_light.json
data/constants/CODATA2022/: speed_of_light.json
python/: README.md  __init__.py  degree_to_radians.py  gradtoradions.py  pyproject.toml  setup.py
python/src/scilib/: config.py  convert_angle_units.py
python/src/scilib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
