[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scilib"
version = "0.1.0"
description = "Precision scientific calculations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/SamsonandDelilah/SciLab"
